{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 21,
  "lineage": "5bab5cf4-cd34-a5e5-a51a-ecc1a738f8da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-844e0bf7",
            "arn": "arn:aws:ec2:eu-west-1:939397960465:instance/i-01e87fdc498116a71",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01e87fdc498116a71",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "monitoring": false,
            "primary_network_interface_id": "eni-0599011e2fccd1b5d",
            "private_dns": "ip-10-0-1-90.eu-west-1.compute.internal",
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-34-245-33-127.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.33.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-076f25695c3de1c89",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b56a87b33847515",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000375ee99006791f"
            ]
          },
          "depends_on": [
            "aws_key_pair.mykey",
            "aws_security_group.example-instance",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c2851f85efb1839d",
            "owner_id": "939397960465",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d30176dd4ad67207",
            "owner_id": "939397960465",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2851f85efb1839d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b1cba5f79fdf22",
            "route_table_id": "rtb-0d30176dd4ad67207",
            "subnet_id": "subnet-03b56a87b33847515"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e9e9d2375c70be2",
            "route_table_id": "rtb-0d30176dd4ad67207",
            "subnet_id": "subnet-071fa567aeeec55bb"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf17e2d97c12b2d",
            "route_table_id": "rtb-0d30176dd4ad67207",
            "subnet_id": "subnet-0de9bb8031a72c3c2"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mariadb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:security-group/sg-0086390b5af3bb295",
            "description": "allow-mariadb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0086390b5af3bb295",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000375ee99006791f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mariadb",
            "name_prefix": null,
            "owner_id": "939397960465",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-mariadb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_security_group.example-instance",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:security-group/sg-000375ee99006791f",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000375ee99006791f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "939397960465",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-05ce5476bc0b6ca0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-05ce5476bc0b6ca0d",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-08832270c0e00d269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-08832270c0e00d269",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-09111685e24fdfc78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-09111685e24fdfc78",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-03b56a87b33847515",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03b56a87b33847515",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-071fa567aeeec55bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-071fa567aeeec55bb",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-0de9bb8031a72c3c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0de9bb8031a72c3c2",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0a60492f8757964a2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:vpc/vpc-0a60492f8757964a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052e11102ed4bb02c",
            "default_route_table_id": "rtb-0539615bcb5592fa9",
            "default_security_group_id": "sg-05820988faef1d5f7",
            "dhcp_options_id": "dopt-726f2814",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a60492f8757964a2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0539615bcb5592fa9",
            "owner_id": "939397960465",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}